--- a/template.html
+++ b/template.html
@@ -27,7 +27,6 @@ $else$
   a { color: #FF0044; } a:hover {text-decoration: underline;}
   footer { position: absolute; bottom: 50px; right: 50px; }
   strong,code {color: #000; } 
-  /*pre>code, code.sourceCode { color: #; }*/
   body {
       font-family: 'Merriweather Sans', arial, sans-serif;
       background-color: white;
@@ -77,7 +76,13 @@ $else$
       font-size: 30px;
       text-align: left;
   }
-  h1.title { color: #000; font-size: 3em; }
+  h1.title {
+      color: #000;
+      font-size: 3em;
+      position: absolute;
+      top: 50px;
+      padding-top: 0px;
+  }
   .author { color: #000; }
   .date {color: #000; }
   footer {
@@ -129,29 +134,33 @@ $else$
       margin: 2em;
   }
 
-  .yolo {
+  .slide h1 {
       width: 100%;
-      height: 100%;
-      background-size: cover;
+      background-color: rgba(256,256,256,0.4);
+      position: absolute;
+      padding: 0;
+      width: 100%;
+      text-align: center;
+      top: 50px;
+      z-index: 1000;
   }
 
-  .yolo h1 {
-      background-color: rgba(256,256,256,0.7);
-      position: absolute;
-      padding: 0;
+  .slide h1+figure img {
+      display: block;
       width: 100%;
-      text-align: center;
-      bottom: 50px;
-  }
-  .yolo.top h1 {
-      background-color: rgba(256,256,256,0.7);
+      height: 100%;
       position: absolute;
-      padding: 0;
-      width: 100%;
-      text-align: center;
-      bottom: inherit;
-      top: 50px;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
   }
+
+  h1+p {
+      position: absolute;
+      bottom: 20px;
+  }
+
 </style>
 $endif$
 $if(math)$
